# commander

./: .env.example  .gitignore  LICENSE  README.md  config.py  config.yaml  connection_manager.py  connections.py  create_pytest_report.py  director.py  docker-compose.sonarqube.yml  docker-compose.yml  icd_config.py  manual_interface.py  mock_operator.py  pub.py  publisher.py  pyinstaller_runner.py  pyproject.toml  requirements.txt  sonar-project.properties  sonar_config.sh  talos.py  terminal_talos.py  testing_interface.py  tkscheduler.py  utils.py
.github/: pull_request_template.md
.github/workflows/: pyinstaller_build.yaml  pytest.yml
assets/: __init__.py
assets/images/: mac-dark-old.icns  mac-dark-spaced-old.icns  mac-default-spaced-old.icns  mac-default.icns
config/: app_settings.yaml  camera_config.local.yaml  camera_config.yaml  config.py  default_config.yaml  network_config.yaml  operator.talos_config.yaml  unctalos.student.rit.edu_config.yaml
digital_twin/: digital_twin.py
director/: basic_director.py
directors/: __init__.py  base_director.py  basic_director.py  continuous_director.py  discrete_director.py
src/: arg_parser.py  config.py  connection_manager.py  connections.py  fps_counter.py  icd_config.py  logger.py  manual_interface.py  mock_operator.py  model_options.py  path_utils.py  publisher.py  scheduler.py  talos_app.py  talos_endpoint.py  thread_scheduler.py  tkscheduler.py  utils.py
src/config/: __init__.py  __init__.pyi  __instance.py  add.py  load.py  manager.py  path.py  read.py  schema.py
src/config/schema/: app.py  robot.py
src/config/watchers/: app_settings_file_handler.py  robot_config_handler.py
src/connection/: connection.py  operator_connections.py  publisher.py
src/directors/: base_director.py  continuous_director.py  discrete_director.py
src/gui/: connection_manager.py  manual_interface.py
src/interface/pyside_gui/: connection_manager.py  main_interface.py
src/interface/textual_tui/: connection.tcss  main_interface.py  manage_connection.py  metric_display.py  scheduler.py
src/pyside_gui/: connection_manager.py  main_interface.py  qtscheduler.py  qtwidgets.py  styles.py
src/streaming/: __init__.py  ffmpeg_streamer.py  pyvcam_streamer.py  stream_controller.py  streamer.py
src/templates/: index.html
src/textual_tui/: app.tcss  connection.tcss  main_interface.py  manage_connection.py  metric_display.py  scheduler.py
src/tk_gui/: connection_manager.py  main_interface.py  tkscheduler.py
src/tracking/: __init__.py  detector.py  options.py  tracker.py  types.py
tests/: conftest.py
tests/connection/: test_operator_connection.py
tests/integration/: test_operator_connection.py
tests/unit/: test_arg_parser.py  test_talos_app.py  test_talos_endpoint.py  test_thread_scheduler.py
tests/util/: mock_operator.py
tracking/: __init__.py  basic_tracker.py  media_pipe_tracker.py  tracker.py
tracking/haar_cascade/: basic_tracker.py
tracking/identifier/: identifier_interface.py  x_pose_identifier.py
tracking/keep_away/: keep_away_director.py  keep_away_model.py  keep_away_tracker.py  keep_away_tracker2.py
tracking/media_pipe/: __init__.py  media_pipe_model.py  media_pipe_pose.py  media_pipe_pose_model.py  media_pipe_tracker.py  mp_utils.py
tracking/speaker_tracker/: color_tracker.py  tracker_interface.py
tracking/squid_game/: squid_game_director.py  squid_game_tracker.py
tracking/yolo/: yolo_model.py  yolo_tracker.py
video/: TestVideo2.mov
(+32 files in other folders)
