[project]
authors = [{name = "Hiro", email = "hiroto125takeuchi@gmail.com"}]
dependencies = [
    # --- Universal dependencies ---
    "docopt==0.6.2",
    "websocket-client==1.8.0",
    "abcmeta==2.2.0",
    "opencv-python==4.10.0.84",
    "mediapipe==0.10.14",
    "numpy==1.26.0",
    "pyyaml==6.0.2",
    "ultralytics==8.3.73",

    # --- Platform-Specific Dependencies ---
    # For x86_64 macOS: use specific versions due to compatibility issues
    "jax[cpu]==0.4.38; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",

    # For other platforms (ARM based Macs, Windows, Linux): use latest versions
    # "jax; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    # "torch; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]
name = "commander"
requires-python = "==3.12.*"
version = "0.1.0"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0"
]
