[project]
authors = [{name = "Hiro", email = "hiroto125takeuchi@gmail.com"}]
dependencies = [
    # --- Universal dependencies ---
    "docopt",
    "websocket-client",
    "opencv-python",
    "opencv-contrib-python",
    "numpy",
    "pyyaml",
    "pillow",
    "customtkinter>=5.2.2",
    "sv-ttk>=2.6.1",
    "darkdetect>=0.8.0",
    "textual>=6.7.0",
]
name = "commander"
requires-python = "==3.12.*"
version = "0.1.0"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "textual-dev>=1.8.0",
]

[project.optional-dependencies]
mediapipe = [
    "mediapipe>=0.10.21",
    "torch>=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    # --- Platform-Specific Dependencies ---
    # For x86_64 macOS: use specific versions due to compatibility issues
    "jax[cpu]==0.4.38; sys_platform == 'darwin' and platform_machine == 'x86_64'", 
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
yolo = ["ultralytics"]
